--- a/TicketsControl/tickets/templates/base.html
+++ b/TicketsControl/tickets/templates/base.html
@@ -18,6 +18,7 @@
     {% bootstrap_javascript %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qwebchannel@6.2.0/qwebchannel.min.js"></script>
     <script>
         history.pushState(null, null, location.href);
         window.onpopstate = function () {
