--- a/TicketsControl/tickets/templates/agentes/inicio_atencion.html
+++ b/TicketsControl/tickets/templates/agentes/inicio_atencion.html
@@ -96,7 +96,7 @@
                     <div class="col-12 col-sm-12 col-md-8 col-lg-6">
                         <div class="d-flex justify-content-center flex-wrap mx-auto ">
                             <a class="btn btn-md btn-primary btn-login fw-bold" type="button" id="btnSalir"
-                                href="{% url 'home' %}">Salir</a>
+                                href="{% url 'registro_agente' %}">Salir</a>
                         </div>
                     </div>
                 </div>
