--- a/TicketsControl/tickets/templates/agentes/registro_agente.html
+++ b/TicketsControl/tickets/templates/agentes/registro_agente.html
@@ -92,11 +92,16 @@
     }
 
     function initializeWebChannel() {
+        var valor = document.getElementById('departamento').value
         if (typeof QWebChannel !== 'undefined') {
             new QWebChannel(qt.webChannelTransport, function (channel) {
                 var resizeObj = channel.objects.resizeObj;
                 if (resizeObj) {
-                    resizeObj.resize_window(300, 300);
+                    if(valor === 'Registro'){
+                        resizeObj.resize_window(200, 570);
+                    }else{
+                        resizeObj.resize_window(200, 470);
+                    }
                 }
             });
         }
