--- a/TicketsControl/tickets/templates/agentes/registro_agente.html
+++ b/TicketsControl/tickets/templates/agentes/registro_agente.html
@@ -16,7 +16,7 @@
                                     <option value="Admisiones">Admisiones</option>
                                     <option value="Registro">Registro</option>
                                     <option value="Cursos Libres">Cursos Libres</option>
-                                    <option value="Cajas">Cajas</option>
+                                    <option value="Cajas" disabled>Cajas</option>
                                 </select>
                             </div>
                             <div class="form-floating mb-3">
