--- a/TicketsControl/tickets/templates/ticket/ticketmaker.html
+++ b/TicketsControl/tickets/templates/ticket/ticketmaker.html
@@ -31,7 +31,7 @@
                         <div class="col-md-6 mb-3">
                             <div class="form-floating">
                                 <div class="input-group input-group-lg">
-                                    <button class="w-100 btn btn-lg btn-primary btn-login fw-bold"
+                                    <button class="w-100 btn btn-lg btn-primary btn-login fw-bold" disabled
                                     type="button" id="loading-indicator" onclick="crear_ticket_cajas()"><p style="font-size: 30px;" class="mt-3 mb-3">Cajas</p></button>
                                 </div>
                             </div>
