--- a/TicketsControl/tickets/templates/agentes/inicio_atencion.html
+++ b/TicketsControl/tickets/templates/agentes/inicio_atencion.html
@@ -27,7 +27,7 @@
                         {% if 'Registro' in cola %}
                         <div class="form-floating mt-2">
                             <div class="input-group input-group-lg" style="align-items: center;">
-                                <h5 class="fw-light fw-bold">Cola de Atencion:&nbsp;&nbsp;</h5>
+                                <h5 class="fw-light fw-bold">Cola:&nbsp;&nbsp;</h5>
                                 <select style="width: 200px; height: 50px; font-size: 18px;"
                                     class="form-select form-select-sm" aria-label=".form-select-sm example"
                                     id="cola_select" name="cola_select" onchange="cola()">
